--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "coderchn/test",
+    "version": "1.0.0",
     "description": "project for test",
     "type": "project",
     "license": "mit",
