--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {}
     /*"autoload": {
     	"psr-4": {
 		"classes\\": "classes"
